# dsck

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.rdoc  bootstrap  configure  configure.in  dsck.gemspec
conf/: dsck.conf
debian/: changelog  control  copyright  dirs  dsck.conf  dsck.cron.d  dsck2mail  rules  watch
dsck/: Makefile.am  Makefile.in  dsck.in
dsck2mail/: Makefile.am  Makefile.in  dsck2mail.in
